# the-textinator

./: .gitignore  README.md  get_macs.py  leds.py  main.py  pyproject.toml  requirements.txt  run_textinator.sh  textinator.service
