[tool.poetry]
name = "the-textinator"
version = "0.2.0"
description = "A day project to send my friends randomly generated acronym facts."
authors = ["Joe Kaufeld <joe.kaufeld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
scapy = "*"
twilio = "^6.38.1"
blinkt = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
